--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
     <style>
-        /* Reset default styles */
         * {
             margin: 0;
             padding: 0;
@@ -16,9 +15,15 @@
             font-family: Arial, sans-serif;
             line-height: 1.6;
             color: #333;
+            background: white;
+            transition: background 0.3s, color 0.3s;
         }
 
-        /* Header styles */
+        body.dark-mode {
+            background: #1e1e1e;
+            color: white;
+        }
+
         header {
             background: #2c3e50;
             color: white;
@@ -26,9 +31,19 @@
             padding: 2rem 0;
         }
 
+        #dark-mode-toggle {
+            background: #ff9800;
+            border: none;
+            color: white;
+            padding: 0.5rem 1rem;
+            cursor: pointer;
+            margin-top: 10px;
+        }
+
         nav {
             background: #34495e;
             padding: 1rem;
+            text-align: center;
         }
 
         nav a {
@@ -37,7 +52,6 @@
             margin: 0 1rem;
         }
 
-        /* Main content styles */
         .container {
             max-width: 1100px;
             margin: auto;
@@ -46,81 +60,30 @@
 
         section {
             padding: 3rem 0;
+            opacity: 0;
+            transform: translateY(20px);
+            transition: opacity 0.6s ease-out, transform 0.6s ease-out;
         }
 
-        /* About section */
-        .about {
-            background: #f4f4f4;
-        }
-
-        /* Projects grid */
-        .projects-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 2rem;
-            padding: 2rem 0;
+        .visible {
+            opacity: 1;
+            transform: translateY(0);
         }
 
         .project-card {
             border: 1px solid #ddd;
             padding: 1rem;
             border-radius: 5px;
+            transition: transform 0.3s;
         }
 
-        /* Skills section */
-        .skills-list {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 1rem;
-            padding: 1rem 0;
+        .project-card:hover {
+            transform: scale(1.05);
         }
 
-        .skill-item {
-            background: #2c3e50;
-            color: white;
-            padding: 0.5rem 1rem;
-            border-radius: 15px;
-        }
-
-        /* Contact form */
         .contact-form {
             max-width: 600px;
             margin: auto;
-        }
-
-        .form-group {
-            margin-bottom: 1rem;
-        }
-
-        input, textarea {
-            width: 100%;
-            padding: 0.5rem;
-            margin-top: 0.5rem;
-        }
-
-        button {
-            background: #2c3e50;
-            color: white;
-            padding: 0.7rem 2rem;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        /* Footer */
-        footer {
-            background: #2c3e50;
-            color: white;
-            text-align: center;
-            padding: 1rem 0;
-            margin-top: 2rem;
-        }
-
-        /* Responsive design */
-        @media (max-width: 768px) {
-            .projects-grid {
-                grid-template-columns: 1fr;
-            }
         }
     </style>
 </head>
@@ -128,6 +91,7 @@
     <header>
         <h1>Sonish Poudel</h1>
         <p>Web Developer | Designer | Creator</p>
+        <button id="dark-mode-toggle">Toggle Dark Mode</button>
     </header>
 
     <nav>
@@ -141,39 +105,16 @@
         <section id="about" class="about">
             <div class="container">
                 <h2>About Me</h2>
-                <p>Your professional introduction goes here. Write about your background, experience, and what drives you.</p>
+                <p>Your professional introduction goes here.</p>
             </div>
         </section>
 
         <section id="projects">
             <div class="container">
                 <h2>My Projects</h2>
-                <div class="projects-grid">
-                    <div class="project-card">
-                        <h3>Project 1</h3>
-                        <p>Description of your first project goes here.</p>
-                    </div>
-                    <div class="project-card">
-                        <h3>Project 2</h3>
-                        <p>Description of your second project goes here.</p>
-                    </div>
-                    <div class="project-card">
-                        <h3>Project 3</h3>
-                        <p>Description of your third project goes here.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section id="skills" class="about">
-            <div class="container">
-                <h2>Skills</h2>
-                <div class="skills-list">
-                    <span class="skill-item">HTML</span>
-                    <span class="skill-item">CSS</span>
-                    <span class="skill-item">JavaScript</span>
-                    <span class="skill-item">React</span>
-                    <span class="skill-item">Node.js</span>
+                <div class="project-card">
+                    <h3>Project 1</h3>
+                    <p>Description of your first project.</p>
                 </div>
             </div>
         </section>
@@ -182,18 +123,9 @@
             <div class="container">
                 <h2>Contact Me</h2>
                 <form class="contact-form">
-                    <div class="form-group">
-                        <label for="name">Name:</label>
-                        <input type="text" id="name" name="name" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="email">Email:</label>
-                        <input type="email" id="email" name="email" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="message">Message:</label>
-                        <textarea id="message" name="message" rows="5" required></textarea>
-                    </div>
+                    <input type="text" id="name" name="name" placeholder="Your Name" required>
+                    <input type="email" id="email" name="email" placeholder="Your Email" required>
+                    <textarea id="message" name="message" rows="5" placeholder="Your Message" required></textarea>
                     <button type="submit">Send Message</button>
                 </form>
             </div>
@@ -201,7 +133,33 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Sonish Poudel . All rights reserved.</p>
+        <p>&copy; 2025 Sonish Poudel. All rights reserved.</p>
     </footer>
+
+    <script>
+        document.getElementById('dark-mode-toggle').addEventListener('click', () => {
+            document.body.classList.toggle('dark-mode');
+        });
+
+        document.querySelectorAll('nav a').forEach(anchor => {
+            anchor.addEventListener('click', function(e) {
+                e.preventDefault();
+                document.querySelector(this.getAttribute('href')).scrollIntoView({
+                    behavior: 'smooth'
+                });
+            });
+        });
+
+        const sections = document.querySelectorAll('section');
+        const observer = new IntersectionObserver(entries => {
+            entries.forEach(entry => {
+                if (entry.isIntersecting) {
+                    entry.target.classList.add('visible');
+                }
+            });
+        });
+
+        sections.forEach(section => observer.observe(section));
+    </script>
 </body>
 </html>
