--- a/index.html
+++ b/index.html
@@ -196,10 +196,20 @@
             </div>
         </section>
     </main>
-
-    <footer>
-        <p>&copy; 2025 Sonish Poudel. All rights reserved.</p>
-    </footer>
+<footer id="footer">
+    <div class="inner">
+	    <ul class="icons">
+            <li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+            <li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+            <li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+			<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+			<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+			</ul>
+				<ul class="copyright">
+					<li>&copy; 2025 Sonish Poudel. All rights reserved.</a></li>
+				</ul>
+		</div>
+</footer>
 
     <script>
         document.getElementById('dark-mode-toggle').addEventListener('click', () => {
