--- a/index.html
+++ b/index.html
@@ -30,6 +30,45 @@
             background: white;
             color: #333;
             transition: background 0.3s, color 0.3s;
+
+		
+#footer {
+    background-color: #333;
+    color: #fff;
+    padding: 20px;
+    text-align: center;
+}
+
+#footer .copyright {
+    font-size: 0.8em;
+    list-style: none;
+    padding-left: 0;
+}
+
+#footer .copyright li {
+    border-left: solid 1px rgba(212, 212, 255, 0.1);
+    color: rgba(244, 244, 255, 0.2);
+    display: inline-block;
+    line-height: 1;
+    margin-left: 1em;
+    padding-left: 1em;
+}
+
+#footer .copyright li:first-child {
+    border-left: 0;
+    margin-left: 0;
+    padding-left: 0;
+}
+
+/* Mobile responsive footer */
+@media screen and (max-width: 480px) {
+    #footer .copyright li {
+        display: block;
+        border-left: 0;
+        margin-left: 0;
+        padding-left: 0;
+        line-height: inherit;
+    }
         }
 
         body.dark-mode {
